--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # ignore
-*https://assets.codepen.io/16327/DrawSVGPlugin3.min.js
+#*https://assets.codepen.io/16327/DrawSVGPlugin3.min.js
 
-*drawSVG
+#*drawSVG
